--- a/test/WebSites/StressTestWebSite/StressTestWebSite.csproj
+++ b/test/WebSites/StressTestWebSite/StressTestWebSite.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\..\build\testsite.props" />
 
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Microsoft.AspNetCore.Server.IISIntegration\Microsoft.AspNetCore.Server.IISIntegration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\shared\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
