--- a/test/MusicStore.E2ETests/MusicStore.E2ETests.csproj
+++ b/test/MusicStore.E2ETests/MusicStore.E2ETests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2</TargetFrameworks>
     <UserSecretsId>MusicStore.E2ETests</UserSecretsId>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ServerGarbageCollection>true</ServerGarbageCollection>
