--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,20 +3,29 @@
     "configurations": [
         {
             "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceRoot}/client-ts/node_modules/jasmine/bin/jasmine.js",
-            "args": ["JASMINE_CONFIG_PATH=${workspaceRoot}/client-ts/Microsoft.AspNetCore.SignalR.Client.TS.Tests/jasmine.json"],
-            "cwd": "${workspaceRoot}/client-ts",
-            "outFiles": []
+            "request": "attach",
+            "name": "Node - Attach by Process ID",
+            "processId": "${command:PickProcess}"
         },
         {
             "type": "node",
-            "request": "attach",
-            "name": "Attach to Port",
-            "address": "localhost",
-            "port": 5858,
-            "outFiles": []
-        }
+            "request": "launch",
+            "name": "Jest - All",
+            "program": "${workspaceFolder}/clients/ts/node_modules/jest/bin/jest",
+            "cwd": "${workspaceFolder}/clients/ts",
+            "args": ["--runInBand"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
+          },
+          {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest - Current File",
+            "program": "${workspaceFolder}/clients/ts/node_modules/jest/bin/jest",
+            "cwd": "${workspaceFolder}/clients/ts",
+            "args": ["${relativeFile}"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
+          }
     ]
 }
