--- a/src/Microsoft.AspNetCore.Server.IIS/Microsoft.AspNetCore.Server.IIS.nuspec
+++ b/src/Microsoft.AspNetCore.Server.IIS/Microsoft.AspNetCore.Server.IIS.nuspec
@@ -26,7 +26,7 @@
 
     <file src="Microsoft.AspNetCore.Server.IIS.targets" target="build/$tfm$/Microsoft.AspNetCore.Server.IIS.targets" />
 
-    <file src="..\AspNetCoreModuleV2\RequestHandler\bin\$Configuration$\Win32\aspnetcorerh.dll" target="runtimes\win-x86\nativeassets\$tfm$\aspnetcorerh.dll" />
-    <file src="..\AspNetCoreModuleV2\RequestHandler\bin\$Configuration$\x64\aspnetcorerh.dll" target="runtimes\win-x64\nativeassets\$tfm$\aspnetcorerh.dll" />
+    <file src="..\AspNetCoreModuleV2\InProcessRequestHandler\bin\$Configuration$\Win32\aspnetcorev2_inprocess.dll" target="runtimes\win-x86\nativeassets\$tfm$\aspnetcorev2_inprocess.dll" />
+    <file src="..\AspNetCoreModuleV2\InProcessRequestHandler\bin\$Configuration$\x64\aspnetcorev2_inprocess.dll" target="runtimes\win-x64\nativeassets\$tfm$\aspnetcorev2_inprocess.dll" />
   </files>
 </package>
