--- a/src/Microsoft.AspNetCore.Mvc.Razor.ViewCompilation/Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.csproj
+++ b/src/Microsoft.AspNetCore.Mvc.Razor.ViewCompilation/Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.csproj
@@ -13,15 +13,6 @@
     <NuspecFile>$(MSBuildProjectName).nuspec</NuspecFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='net461'">
-    <RuntimeIdentifiers>win7-x86;win7-x64</RuntimeIdentifiers>
-    <PlatformTarget Condition="'$(Platform)'=='AnyCPU'">x86</PlatformTarget>
-    <AssemblyName>$(AssemblyName)-$(PlatformTarget)</AssemblyName>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>bin\$(Configuration)\net461\win7-$(PlatformTarget)</OutputPath>
-    <IntermediateOutputPath>obj\$(Configuration)\net461\win7-$(PlatformTarget)</IntermediateOutputPath>
-  </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="$(TasksProjectDirectory)Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.Tasks.csproj" PrivateAssets="true" ReferenceOutputAssembly="false" />
 
@@ -31,21 +22,27 @@
     <PackageReference Update="Microsoft.NETCore.App" PrivateAssets="All" />
   </ItemGroup>
 
-  <Target Name="BuildX64" AfterTargets="Build" Condition="'$(TargetFramework)'=='net461' AND '$(PlatformTarget)'!='x64'">
+  <Target Name="BuildX86" AfterTargets="Build" Condition="'$(TargetFramework)'=='net461' AND '$(PlatformTarget)'!='x86'">
     <MSBuild
       Projects="$(MSBuildProjectFullPath)"
       Targets="Build"
       Properties="
         Configuration=$(Configuration);
-        TargetFramework=net461;
-        Platform=x64;" />
+        TargetFramework=$(TargetFramework);
+        Platform=x86;
+        BuildNumber=$(BuildNumber);
+        OutputPath=$(OutputPath);
+        TargetName=$(TargetName)-x86" />
   </Target>
 
-  <Target Name="PopulateNuspec" BeforeTargets="GenerateNuspec" DependsOnTargets="BuildX64;">
+  <Target Name="PopulateNuspec" BeforeTargets="GenerateNuspec" DependsOnTargets="BuildX86">
 
     <PropertyGroup>
       <!-- Make sure we create a symbols.nupkg. -->
       <IncludeSymbols>true</IncludeSymbols>
+
+      <!-- RepositoryCommit is only available when "build" runs, but not during dotnet pack -->
+      <RepositoryCommit Condition="'$(RepositoryCommit)' == ''">unknown</RepositoryCommit>
 
       <NuspecProperties>
         id=$(PackageId);
@@ -66,10 +63,10 @@
         TaskBinary=$(TasksProjectDirectory)bin\$(Configuration)\netstandard2.0\$(AssemblyName).Tasks.dll;
         TaskSymbol=$(TasksProjectDirectory)bin\$(Configuration)\netstandard2.0\$(AssemblyName).Tasks.pdb;
 
-        OutputExeX86=$(OutputPath)net461\win7-x86\$(AssemblyName)-x86.exe;
-        OutputExeSymbolX86=$(OutputPath)net461\win7-x86\$(AssemblyName)-x86.pdb;
-        OutputExeX64=$(OutputPath)net461\win7-x64\$(AssemblyName)-x64.exe;
-        OutputExeSymbolX64=$(OutputPath)net461\win7-x64\$(AssemblyName)-x64.pdb;
+        OutputExeX86=$(OutputPath)net461\$(AssemblyName)-x86.exe;
+        OutputExeSymbolX86=$(OutputPath)net461\$(AssemblyName)-x86.pdb;
+        OutputExeAnyCPU=$(OutputPath)net461\$(AssemblyName).exe;
+        OutputExeSymbolAnyCPU=$(OutputPath)net461\$(AssemblyName).pdb;
       </NuspecProperties>
     </PropertyGroup>
   </Target>
