--- a/test/testapps/SimpleMvcFSharp/SimpleMvcFSharp.fsproj
+++ b/test/testapps/SimpleMvcFSharp/SimpleMvcFSharp.fsproj
@@ -16,6 +16,11 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(RunningAsTest)' == ''">
+    <!-- We don't want to run build server when not running as tests. -->
+    <UseRazorBuildServer>false</UseRazorBuildServer>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="Models/ErrorViewModel.fs" />
     <Compile Include="Program.fs" />
