--- a/src/AspNetCoreModuleV2/CommonLib/CommonLib.vcxproj
+++ b/src/AspNetCoreModuleV2/CommonLib/CommonLib.vcxproj
@@ -174,6 +174,7 @@
   <ItemGroup>
     <ClInclude Include="application.h" />
     <ClInclude Include="fx_ver.h" />
+    <ClInclude Include="hostfxroptions.h" />
     <ClInclude Include="hostfxr_utility.h" />
     <ClInclude Include="iapplication.h" />
     <ClInclude Include="debugutil.h" />
@@ -189,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fx_ver.cxx" />
+    <ClCompile Include="hostfxroptions.cpp" />
     <ClCompile Include="hostfxr_utility.cpp" />
     <ClCompile Include="requesthandler_config.cpp" />
     <ClCompile Include="SRWLockWrapper.cpp" />
