Remove Interop build steps - make Interop test asset projects more "normal"     - use usual mechanism to target latest ASP.NET Core bits     - remove use of `$(BuildInteropProjects)` - remove separate step to restore Interop projects - expand FunctionalTestWithAssets.targets to help w/ local testing     - still delayed and done only when necessary     - handle non-Helix testing e.g. handle `dotnet test` too     - build test assets into location `InteropTests` expects on local machine - add FunctionalTestWithAssets.props, providing relevant defaults
nits:
- rename `@(FunctionalTestAssetProjectReference)` to `@(TestAssetProjectReference)`
- cleanup leftover reference to ProjectTemplates/testassets/
    - should have been removed in 54ff37976ae5
- remove `/p:RunTemplateTests=true`; no need to specify the default

--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -33,12 +33,8 @@ jobs:
     - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
       displayName: Build shared fx
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Restore interop projects
-    - script: .\eng\build.cmd -ci -nobl -noBuildRepoTasks -NoRestore -test -all -noBuildNative
-              -projects eng\helix\helix.proj
-              /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true
+    - script: .\eng\build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildNative
+              -projects eng\helix\helix.proj /p:IsHelixJob=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
       displayName: Run build.cmd helix target
       env:
