--- a/eng/Build.props
+++ b/eng/Build.props
@@ -107,7 +107,7 @@
         <NativeProjects Include="$(RepoRoot)src\**\*.vcxproj" Exclude="@(ProjectToExclude)" AdditionalProperties="Platform=Win32" />
         <NativeProjects Include="$(RepoRoot)src\**\*.vcxproj" Exclude="@(ProjectToExclude)" AdditionalProperties="Platform=arm64" />
       </ItemGroup>
-      
+
       <ItemGroup>
         <ProjectToBuild Condition=" $(BuildNative) " Include="@(NativeProjects)" Exclude="@(ProjectToExclude)" />
         <ProjectToExclude Condition=" !$(BuildNative) " Include="@(NativeProjects)" />
@@ -137,13 +137,6 @@
 
         <ProjectToBuild Condition=" '$(BuildJava)' == 'true'" Include="@(JavaProjects)" Exclude="@(ProjectToExclude)" />
         <ProjectToExclude Condition=" '$(BuildJava)' != 'true'" Include="@(JavaProjects)" />
-
-        <!-- These interop test projects can only be restored and built after the shared framework is built -->
-        <InteropProjects Include="$(RepoRoot)src\Grpc\**\*.csproj"
-                      Exclude="@(ProjectToExclude)" />
-
-        <ProjectToBuild Condition=" '$(BuildInteropProjects)' == 'true'" Include="@(InteropProjects)" Exclude="@(ProjectToExclude)" />
-        <ProjectToExclude Condition=" '$(BuildInteropProjects)' != 'true'" Include="@(InteropProjects)" />
 
         <!--
           Use caution to avoid deep recursion. If the globbing pattern picks up something which exceeds MAX_PATH,
@@ -186,9 +179,9 @@
                           $(RepoRoot)src\WebEncoders\**\*.csproj;
                           $(RepoRoot)src\HealthChecks\**\*.csproj;
                           $(RepoRoot)src\Testing\**\*.csproj;
+                          $(RepoRoot)src\Grpc\**\*.csproj;
                           $(RepoRoot)src\ProjectTemplates\*\*.csproj;
                           $(RepoRoot)src\submodules\spa-templates\src\*.csproj;
-                          $(RepoRoot)src\ProjectTemplates\testassets\*\*.csproj;
                           $(RepoRoot)src\Extensions\**\*.csproj;
                           "
                         Exclude="
