--- a/eng/targets/FunctionalTestWithAssets.targets
+++ b/eng/targets/FunctionalTestWithAssets.targets
@@ -1,27 +1,29 @@
 <Project>
-
-  <ItemGroup>
-    <ProjectReference Include="@(FunctionalTestAssetProjectReference)" ReferenceOutputAssembly="false" />
-  </ItemGroup>
-
-  <Target Name="CollectTestAssetPayload" BeforeTargets="GetCopyToOutputDirectoryItems" >
-    <MSBuild Targets="CollectFunctionalTestPayload"
-             BuildInParallel="true"
-             SkipNonexistentTargets="true"
-             Projects="%(FunctionalTestAssetProjectReference.Identity)"
-             RebaseOutputs="True">
-      <Output TaskParameter="TargetOutputs" ItemName="DependencyPayload" />
-    </MSBuild>
-
+  <!--
+    Test asset publication support intended for case where an asset is referenced in a single test project.
+    References in more than one or two test projects would slow the build because each restore or publish
+    operation gets unique (per-test project) global properties.
+  -->
+  <Target Name="PublishTestAssets"
+      BeforeTargets="Publish;RunTests;VSTest"
+      Condition=" '@(TestAssetProjectReference->Count())' != 0 ">
+    <!-- Build and Publish test assets into folders relative to test project. -->
     <ItemGroup>
-      <ContentWithTargetPath
-        Include="@(DependencyPayload)"
-        Condition="'@(DependencyPayload->Count())' != '0'">
-        <TargetPath>%(DependencyPayload.RelativePath)</TargetPath>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      </ContentWithTargetPath>
+      <_ProjectsToPublish Include="@(TestAssetProjectReference)" />
+      <_ProjectsToPublish AdditionalProperties="%(_ProjectsToPublish.AdditionalProperties);
+          OutputPath=$(OutputPath)%(RelativeFolder);
+          PublishDir=$(PublishDir)%(RelativeFolder)" />
     </ItemGroup>
-  </Target>
 
+    <!--
+      These are separate invocations to ensure Publish sees restored setup. Platform and PlatformTarget removals
+      are to fix builds inside VS.
+    -->
+    <MSBuild Projects="@(_ProjectsToPublish->WithMetadataValue('SkipBuild', 'false'))"
+        BuildInParallel="$(BuildInParallel)"
+        Properties="MSBuildRestoreSessionId=$([System.Guid]::NewGuid())"
+        RemoveProperties="Platform;PlatformTarget"
+        Targets="Restore" />
+    <MSBuild Projects="@(_ProjectsToPublish)" Targets="Publish" RemoveProperties="Platform;PlatformTarget" />
+  </Target>
 </Project>
